# lisp-rust-main-pico

./: AGENTS.md  Cargo.toml  README.md  openocd.cfg
.cargo/: config.toml
src/: core.rs  main.rs  motor.rs  pico_core.rs  pid.rs
