
[package]
edition = "2024"
name = "lisp-rust-main-pico"
version = "0.1.0"
license = "MIT or Apache-2.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-alloc = "0.6"
defmt = "1"
defmt-rtt = "1"
heapless = "0.9.2"
nb = "1"
scanner = { git = "https://github.com/jig/scanner-rust" }
mal = { git = "https://github.com/jig/lisp-rust", tag = "v0.1.5" }

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl", "defmt"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl", "defmt"] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl", "defmt"] }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
lto = "fat"
opt-level = "z"
overflow-checks = false
